--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="flex flex-wrap">
                 <div class="w-60">
                     <img class="my-4 h-24 rounded-full mx-auto cursor-pointer transition duration-300 transform hover:scale-110"
-                        src="http://pan.yboo.cn/view.php/56a5d9e572748522a5a16cde19dc6a9e.png" alt="avatar" />
+                        src="https://pic.ww-fs.com/file/56a5d9e572748522a5a16cde19dc6a9e" alt="avatar" />
                     <p class="mt-2 mb-0 text-xl text-center font-serif font-extrabold dark:text-gray-200">BeaCox</p>
                     <p class="-mt-1 text-l text-center font-sans font-light text-gray-400"> Stay humble, remain
                         critical.</p>
