--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                 <div class="w-60">
                     <img class="my-4 h-24 rounded-full mx-auto cursor-pointer transition duration-300 transform hover:scale-110"
                         src="/assets/avatar.8df22d7f.png" alt="avatar" />
-                    <p class="mt-2 mb-0 text-xl text-center font-serif font-extrabold dark:text-gray-200">BeaCox</p>
+                    <p class="mt-2 mb-0 text-xl text-center font-serif font-extrabold dark:text-gray-200">ORyong</p>
                     <p class="-mt-1 text-l text-center font-sans font-light text-gray-400"> Stay humble, remain
                         critical.</p>
                     <div class="my-4 w-full text-center">
                         <a class="inline-block mx-2 px-4 py-2 rounded-lg transform transition bg-blue-500 hover:bg-blue-400 hover:-translate-y-0.5 focus:ring-blue-500 focus:ring-opacity-50 focus:outline-none focus:ring focus:ring-offset-1 active:bg-blue-600 uppercase tracking-wider font-semibold text-xs text-white shadow-lg"
-                            href="https://blog.beacox.space" target="_blank">
+                            href="https://ww-fs.com" target="_blank">
                             Blog
                         </a>
                         <a class="inline-block mx-2 px-4 py-2 rounded-lg transform transition bg-blue-500 hover:bg-blue-400 hover:-translate-y-0.5 focus:ring-blue-500 focus:ring-opacity-50 focus:outline-none focus:ring focus:ring-offset-1 active:bg-blue-600 uppercase tracking-wider font-semibold text-xs text-white shadow-lg"
-                            href="https://blog.beacox.space/atom.xml" target="_blank">
+                            href="https://ww-fs.com/rss.xml" target="_blank">
                             RSS
                         </a>
                     </div>
