--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                 </div>
                 <div class="w-20">
                     <a class=" h-1/3 py-5 w-full rounded-tr-md inline-block box-border border-b-2 border-white bg-yellow-200 text-gray-500 text-center transform transition hover:text-blue-400 hover:bg-yellow-100"
-                        href="https://github.com/BeaCox" target="_blank">
+                        href="https://github.com/yulongsa" target="_blank">
                         <p class="social"><i class="iconfont icon-github"></i></p>
                     </a>
                     <a class=" h-1/3 py-5 w-full block box-border border-b-2 border-white bg-yellow-200 text-gray-500 text-center transform transition hover:text-blue-400 hover:bg-yellow-100"
-                        href="https://t.me/BeaCox" target="_blank">
+                        href="https://t.me/OR753" target="_blank">
                         <p class="social"><i class="iconfont icon-telegram"></i></p>
                     </a>
                     <a class=" h-1/3 py-5 w-full rounded-br-md block box-border bg-yellow-200 text-gray-500 text-center transform transition hover:text-blue-400 hover:bg-yellow-100"
-                        href="mailto:root@beacox.space" target="_blank">
+                        href="mailto:tfv@live.com" target="_blank">
                         <p class="social"><i class="iconfont icon-email"></i></p>
                     </a>
                 </div>
@@ -56,23 +56,16 @@
             <li class="mx-6 my-4">
                 <h2 class="font-mono font-extrabold text-2xl dark:text-gray-400">About:</h2>
                 <div class="font-serif dark:text-gray-400 pl-4 md:pl-8">
-                    <p>My name is <b>Yuansheng Yang</b>.</p>
-                    <p>My hacker handle is <b>BeaCox</b>.It can be split into "Be a cox".</p>
-                    <p>It means I want to take charge of my life and not go with the flow.</p>
-                    <p>My academic interest is in <b>system & software security</b>.</p>
+                    <p>My name is <b>Frans Tien</b>.</p>
+                    <p>My hacker handle is <b>ORyong</b>.It can be split into "OR yonung".</p>
+                    <p>It means RoyalDragon's English name.</p>
+                    <p>My academic interest is in <b>Pharmacy</b>.</p>
                 </div>
             </li>
             <li class="mx-6 my-4">
                 <h2 class="font-mono font-extrabold text-2xl dark:text-gray-400">Honor and Awards:</h2>
                 <ul class="font-serif dark:text-gray-400 list-disc list-inside pl-4 md:pl-8">
-                    <li>2023-10 &nbsp;&nbsp;Yellow Belt from <a class="hover:underline text-green-500"
-                        href="https://pwn.college/hacker/33306">pwn.college</a>
-                    </li>
-                    <li>2024-03 &nbsp;&nbsp;Blue Belt from <a class="hover:underline text-green-500"
-                        href="https://pwn.college/hacker/33306">pwn.college</a>
-                    </li>
-                    <li>2024-04 &nbsp;&nbsp;<a class="hover:underline text-green-500"
-                        href="https://play.0ops.sjtu.cn">SJTU CTF 2024</a> 6th place
+                    <li>2022-11 &nbsp;&nbsp;Third Prize in Mathematical Modeling Competition for College Students at Qingdao Agricultural University<a class="hover:underline text-green-500"
                     </li>
                 </ul>
             </li>
@@ -90,8 +83,8 @@
                     <tbody>
                         <tr>
                             <td class="border border-slate-200">2021-2025</td>
-                            <td class="border border-slate-200">Shanghai Jiao Tong University</td>
-                            <td class="border border-slate-200">Information Security</td>
+                            <td class="border border-slate-200">Qingdao Agricultural University</td>
+                            <td class="border border-slate-200">Pharmacy</td>
                             <td class="border border-slate-200">Bachelor </td>
                         </tr>
                     </tbody>
@@ -107,10 +100,8 @@
     <div class="flex">
         <div class="mx-auto my-4">
             <p class="text-center text-gray-400">Copyright © Since 2022 <a
-                    class="font-bold hover:underline hover:text-gray-600" href="https://beacox.space"
-                    target="_blank">BeaCox</a></p>
-            <p class="text-center text-gray-400"><a class="hover:underline hover:text-gray-600 transform transition"
-                    href="https://beian.miit.gov.cn/" target="_blank">沪ICP备2022016895号-2</a></p>
+                    class="font-bold hover:underline hover:text-gray-600" href="https://ww-fs.com"
+                    target="_blank">ORyong</a></p>
         </div>
     </div>
 </body>
