--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
                 </div>
             </li>
             <li class="mx-6 my-4">
-                <h2 class="font-mono font-extrabold text-2xl dark:text-gray-400">Honor and Awards:</h2>
-                <ul class="font-serif dark:text-gray-400 list-disc list-inside pl-4 md:pl-8">
-                    <li>2022-11 &nbsp;&nbsp;Third Prize in Mathematical Modeling Competition for College Students at Qingdao Agricultural University<a class="hover:underline text-green-500"
-                    </li>
-                </ul>
-            </li>
+    <h2 class="font-mono font-extrabold text-2xl dark:text-gray-400">Honor and Awards:</h2>
+    <ul class="font-serif dark:text-gray-400 list-disc list-inside pl-4 md:pl-8">
+        <li>
+            2022-11 &nbsp;&nbsp;
+            Third Prize in Mathematical Modeling Competition for College Students at Qingdao Agricultural University
+            <a class="hover:underline text-green-500" href="https://lxyxx.qau.edu.cn/content/xuetuangongzuo/39bf7ab3021548e5a39a575126660601">查看详情</a> <!-- 假设有一个链接地址 -->
+        </li>
+    </ul>
+</li>
+
             <li class="mx-6 my-4 dark:text-gray-400">
                 <h2 class="font-mono font-extrabold text-2xl">Education:</h2>
                 <table class="table-auto min-w-full border-spacing-80 border border-slate-400 font-serif text-xs md:text-lg">
