--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <ul class="font-serif dark:text-gray-400 list-disc list-inside pl-4 md:pl-8">
         <li>
             2022-11 &nbsp;&nbsp;
-            Third Prize in Mathematical Modeling Competition for College Students at Qingdao Agricultural University
-            <a class="hover:underline text-green-500" href="https://lxyxx.qau.edu.cn/content/xuetuangongzuo/39bf7ab3021548e5a39a575126660601">查看详情</a> <!-- 假设有一个链接地址 -->
+            Third Prize in Mathematical Modeling Competition for College Students at Qingdao Agricultural University.
+            <a class="hover:underline text-green-500" href="https://lxyxx.qau.edu.cn/content/xuetuangongzuo/39bf7ab3021548e5a39a575126660601">More Things</a> <!-- 假设有一个链接地址 -->
         </li>
     </ul>
 </li>
