--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
             Third Prize in Mathematical Modeling Competition for College Students at Qingdao Agricultural University.
             <a class="hover:underline text-green-500" href="https://lxyxx.qau.edu.cn/content/xuetuangongzuo/39bf7ab3021548e5a39a575126660601">More Things</a> <!-- 假设有一个链接地址 -->
         </li>
+        <li>
+            2023-08 &nbsp;&nbsp;
+            Obtained the first software copyright registration certificate.
+            <a class="hover:underline text-green-500" href="/assets/YJ.png">More Things</a> <!-- 假设有一个链接地址 -->
+        </li>
+        <li>
+            2023-10 &nbsp;&nbsp;
+            Obtained the second software copyright registration certificate.
+            <a class="hover:underline text-green-500" href="/assets/YJ.png">More Things</a> <!-- 假设有一个链接地址 -->
+        </li>
     </ul>
 </li>
 
