--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ var _hmt = _hmt || [];
         <li>
             2023-10 &nbsp;&nbsp;
             Obtained the second software copyright registration certificate.
-            <a class="hover:underline text-green-500" href="/assets/YJ.png">More Things</a> <!-- 假设有一个链接地址 -->
+            <a class="hover:underline text-green-500" href="/assets/RZ2.png">More Things</a> <!-- 假设有一个链接地址 -->
         </li>
     </ul>
 </li>
