--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+QQQQ<!DOCTYPE html>
 <html lang="zh-CN">
 <script>
 var _hmt = _hmt || [];
@@ -107,6 +107,12 @@ var _hmt = _hmt || [];
                             <td class="border border-slate-200">Qingdao Agricultural University</td>
                             <td class="border border-slate-200">Pharmacy</td>
                             <td class="border border-slate-200">Bachelor </td>
+                        </tr>
+                                              <tr>
+                            <td class="border border-slate-200">2025-2028</td>
+                            <td class="border border-slate-200">China Medical University</td>
+                            <td class="border border-slate-200">Pharmacy</td>
+                            <td class="border border-slate-200">Postgraduate</td>
                         </tr>
                     </tbody>
                 </table>
