--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ var _hmt = _hmt || [];
             <div class="flex flex-wrap">
                 <div class="w-60">
                     <img class="my-4 h-24 rounded-full mx-auto cursor-pointer transition duration-300 transform hover:scale-110"
-                        src="/assets/avatar.8df22d7f.png" alt="avatar" />
+                        src="https://p.yboo.cn/2025/07/10/686f9a68970df.webp" alt="avatar" />
                     <p class="mt-2 mb-0 text-xl text-center font-serif font-extrabold dark:text-gray-200">ORyong</p>
                     <p class="-mt-1 text-l text-center font-sans font-light text-gray-400"> Stay humble, remain
                         critical.</p>
@@ -45,7 +45,7 @@ var _hmt = _hmt || [];
                 </div>
                 <div class="w-20">
                     <a class=" h-1/3 py-5 w-full rounded-tr-md inline-block box-border border-b-2 border-white bg-yellow-200 text-gray-500 text-center transform transition hover:text-blue-400 hover:bg-yellow-100"
-                        href="https://github.com/yulongsa" target="_blank">
+                        href="https://github.com/ORyong" target="_blank">
                         <p class="social"><i class="iconfont icon-github"></i></p>
                     </a>
                     <a class=" h-1/3 py-5 w-full block box-border border-b-2 border-white bg-yellow-200 text-gray-500 text-center transform transition hover:text-blue-400 hover:bg-yellow-100"
@@ -53,7 +53,7 @@ var _hmt = _hmt || [];
                         <p class="social"><i class="iconfont icon-telegram"></i></p>
                     </a>
                     <a class=" h-1/3 py-5 w-full rounded-br-md block box-border bg-yellow-200 text-gray-500 text-center transform transition hover:text-blue-400 hover:bg-yellow-100"
-                        href="mailto:tfs@tfs.tf" target="_blank">
+                        href="mailto:shan@live.cn" target="_blank">
                         <p class="social"><i class="iconfont icon-email"></i></p>
                     </a>
                 </div>
