--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ var _hmt = _hmt || [];
             <div class="flex flex-wrap">
                 <div class="w-60">
                     <img class="my-4 h-24 rounded-full mx-auto cursor-pointer transition duration-300 transform hover:scale-110"
-                        src="https://p.yboo.cn/2025/07/10/686f9a68970df.webp" alt="avatar" />
+                        src="https://avatars.githubusercontent.com/u/169452446?v=4" alt="avatar" />
                     <p class="mt-2 mb-0 text-xl text-center font-serif font-extrabold dark:text-gray-200">ORyong</p>
                     <p class="-mt-1 text-l text-center font-sans font-light text-gray-400"> Stay humble, remain
                         critical.</p>
